--- a/docs/Angular/Basic/创建应用.md
+++ b/docs/Angular/Basic/创建应用.md
@@ -1,5 +1,5 @@
-# 创建应用
-## 一、学习 Angular 必备基础 
+# angular8创建应用
+## 一、学习 Angular8 必备基础 
 * 必备基础：html 、css 、js、es6 
 * 如果有 Typescript 基础更容易理解，没有 Typescript 基础也可以学此教程Typescript 语法会详细讲解。
 * Typescript 基础入门教程: [https://www.itying.com/goods-905.html](https://www.itying.com/goods-905.html)
