--- a/docs/Zhufeng/Es6/1.Async.md
+++ b/docs/Zhufeng/Es6/1.Async.md
@@ -808,3 +808,158 @@ promises-aplus-tests promise.js
 ```
 ![测试成功.png](https://upload-images.jianshu.io/upload_images/13505073-3e3a867d88d48b2d.png?imageMogr2/auto-orient/strip%7CimageView2/2/w/1240)
 
+### resolve了一个新的promise问题
+
+```js
+const Promise = require('./promise.js')
+const p = new Promise((resolve,reject)=> {
+  resolve(new Promise((resolve,reject)=> {
+    setTimeout(() => {
+      resolve('data')
+    }, 1000);
+  }))
+})
+p.then(data=> {
+  console.log(data);
+},err=> {
+  console.log(err);
+})
+```
+
+返回的结果是一个promise等待对象,也就是resolve的值是一个新的promise,会等到这个内部的promise完成
+
+需要给value值加一个判断是否是Promise实现递归解析
+
+```js
+let resolve = value => {
+//! 21.如果一个promise resolve了一个新的promise 会等到这个内部的promise完成
+  if(value instanceof Promise) {
+    return value.then(resolve,reject)  //和resolvePromise功能是一样的
+  }
+  ...
+ }
+```
+
+### catch方法
+
+```js
+const Promise = require('./promise.js')
+const p = new Promise((resolve,reject)=> {
+  resolve(new Promise((resolve,reject)=> {
+    setTimeout(() => {
+      resolve('data')
+    }, 1000);
+  }))
+})
+p.then(data=> {
+  throw new Error('err')
+},err=> {
+  console.log(err);
+}).catch(err=> {
+  console.log(err);
+}).then(data=> {
+  console.log(data);
+})
+```
+
+catch方法其实就是一个没有成功的then,并不会影响后续then方法的执行
+
+在我们的库中加入catch方法
+
+```js
+catch(errCallback) {  //! 22.没有成功的then
+    return this.then(null,errCallback)
+  }
+```
+
+### Promise的静态方法
+
+有的时候我们为了方便调用,可以直接调用类上的成功失败方法
+
+```js
+Promise.resolve(123).then(data=> {
+  console.log(123);
+})
+```
+
+```js
+Promise.reject(123).then(null,err=> {
+  console.log(err);
+})
+```
+
+实现:在执行方法时返回了一个新的promise
+
+```js
+  static resolve(value) {  //! 23. 创建了一个成功的promise
+    return new Promise((resolve,reject)=> {
+      resolve(value);
+    })
+  }
+  static reject(value) { //! 24.创建了一个失败的promise
+    return new Promise((resolve,reject)=> {
+      reject(value);
+    })
+  }
+```
+
+### all方法
+
+1. 全部完成才算完成,如果有一个失败了就失败了
+2. 处理多个异步的并发问题
+3. 是按照顺序执行的
+
+```js
+//* 判断是不是Promise
+const isPromise = value => {
+  if ((typeof value === 'object' && value !== null) || typeof value === 'function') {
+    return typeof value.then === 'function'
+  }
+  return false
+}
+Class Promise {
+    ...
+static all(promises) {  //! 25.实现all方法
+    return new Promise((resolve, reject) => {
+      let arr = [];  //存放最终结果的
+      let i = 0;
+      let processData = (index, data) => { //处理数据
+        arr[index] = data; //将数据放到数组中,成功的数量和传入的数量相等的时候将结果抛出去即可
+        if (++i === promises.length) {
+          resolve(arr)
+        }
+      }
+      for (let i = 0; i < promises.length; i++) {
+        const current = promises[i];  //获取当前的每一项
+        if (isPromise(current)) { //如果是promise .. 
+          current.then(data => {
+            processData(i, data)
+          }, err => reject)
+        } else {
+          processData(i, current)
+        }
+      }
+    })
+  }
+}
+```
+
+使用:
+
+```js
+const Promise = require('./promise.js')
+let fs = require('fs').promises
+/**
+ * promise.all
+ * 1. 全部完成才算完成,如果有一个失败了就失败了
+ * 2. 处理多个异步的并发问题
+ * 3. 是按照顺序执行的
+ */
+Promise.all(
+  [fs.readFile('./name.txt', 'utf8'),
+
+  fs.readFile('./age.txt', 'utf8'),1, 2, 3,]
+).then(data => {
+  console.log(data);
+})
+```
